--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 
 src/.DS_Store
 .DS_Store
+out/production/StreamWorld/txt/serier.txt
+out/production/StreamWorld/txt/film.txt
+out/production/StreamWorld/test.txt
+out/production/StreamWorld/Medie.class
+out/production/StreamWorld/Main.class
+out/production/StreamWorld/GUI.class
+out/production/StreamWorld/Film.class
+out/production/StreamWorld/GUI.class
+out/production/StreamWorld/Main.class
