--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ out/production/StreamWorld/Main.class
 out/production/StreamWorld/filmplakater/2001 A Space Odyssey.jpg
 out/
 .idea
+StreamWorld.iml
